--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
 	margin: 0;
-	font-family: "Montserrat", sans-serif;
+	font-family: "Montserrat", sans-serif !important;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-
 	background-color: #050100 !important;
 }
